--- a/src/main/resources/templates/altaModificacionEmpleado.html
+++ b/src/main/resources/templates/altaModificacionEmpleado.html
@@ -9,7 +9,8 @@
     <h1>
         Formulario de alta/modificacion de empleado
     </h1>
-    <form th:action="@{/empleado/persistirEmpleado}"  method="post" th:object="${empleado}">
+    <form th:action="@{/empleado/persistirEmpleado}"  method="post" th:object="${empleado}"
+        enctype="multipart/form-data" >
         <input type="hidden" th:value="${empleado.id}" name="id" th:field="*{id}">
         <input type="text" placeholder="Nombre: " th:field="*{nombre}" th:value="${empleado.nombre}">
         <input type="text" placeholder="Primer Apellido: " th:field="*{primerApellido}" 
@@ -42,6 +43,9 @@
             <input type="radio" id="otro" value="OTRO" th:field="*{genero}">
 
         </fieldset>
+
+        <label for="foto">Foto: </label>
+        <input type="file" name="imagen" id="foto">
         <input type="submit">
     </form>
 </body>
