--- a/src/main/resources/templates/altaModificacionEmpleado.html
+++ b/src/main/resources/templates/altaModificacionEmpleado.html
@@ -4,49 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <h1>
-        Formulario de alta/modificacion de empleado
-    </h1>
-    <form th:action="@{/empleado/persistirEmpleado}"  method="post" th:object="${empleado}"
-        enctype="multipart/form-data" >
-        <input type="hidden" th:value="${empleado.id}" name="id" th:field="*{id}">
-        <input type="text" placeholder="Nombre: " th:field="*{nombre}" th:value="${empleado.nombre}">
-        <input type="text" placeholder="Primer Apellido: " th:field="*{primerApellido}" 
-        th:value="${empleado.primerApellido}">
-        <input type="text" placeholder="Segundo Apellido: " th:field="*{segundoApellido}" 
-        th:value="${empleado.segundoApellido}">
-        <label for="fechaAlta">Fecha Alta: </label>
-        <input type="date" id="fechaAlta" th:field="*{fechaAlta}" 
-        th:value="${empleado.fechaAlta}">
+    <div class="container">
+        <div class="row">
+        <div class="col">
+
+            <button type="button" class="btn btn-primary">Primary</button>
+            <h1>
+                Formulario de alta/modificacion de empleado
+            </h1>
+            <form th:action="@{/empleado/persistirEmpleado}"  method="post" th:object="${empleado}"
+                enctype="multipart/form-data" >
+                <input type="hidden" th:value="${empleado.id}" name="id" th:field="*{id}">
+                <input type="text" placeholder="Nombre: " th:field="*{nombre}" th:value="${empleado.nombre}">
+                <input type="text" placeholder="Primer Apellido: " th:field="*{primerApellido}" 
+                th:value="${empleado.primerApellido}">
+                <input type="text" placeholder="Segundo Apellido: " th:field="*{segundoApellido}" 
+                th:value="${empleado.segundoApellido}">
+                <label for="fechaAlta">Fecha Alta: </label>
+                <input type="date" id="fechaAlta" th:field="*{fechaAlta}" 
+                th:value="${empleado.fechaAlta}">
+                
+                <label for="salario">Salario: </label>
+                <input type="text" th:field="*{salario}" id="salario" th:value="${empleado.salario}">
         
-        <label for="salario">Salario: </label>
-        <input type="text" th:field="*{salario}" id="salario" th:value="${empleado.salario}">
+                <label for="departamento">Departamento</label>
+                <select name="departamento">
+                    <option></option>
+                    <option th:each="departamento : ${departamentos}" 
+                              th:value="${departamento.id}"
+                                th:text="${departamento.nombre}"
+                                th:selected="${empleado.id != 0 and 
+                                    departamento.id == empleado.departamento.id}"></option>
+                </select>
+                <fieldset>
+                    <legend>Genero: </legend>
+                    <label for="hombre">Hombre: </label>
+                    <input type="radio" id="hombre" value="HOMBRE" th:field="*{genero}">
+                    <label for="mujer">Mujer: </label>
+                    <input type="radio" id="mujer" value="MUJER" th:field="*{genero}">
+                    <label for="otro">Otro: </label>
+                    <input type="radio" id="otro" value="OTRO" th:field="*{genero}">
+        
+                </fieldset>
+        
+                <label for="foto">Foto: </label>
+                <input type="file" name="imagen" id="foto">
+                <input type="submit">
+            </form>
+        </div>
+    </div>
+       
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>   
 
-        <label for="departamento">Departamento</label>
-        <select name="departamento">
-            <option></option>
-            <option th:each="departamento : ${departamentos}" 
-                      th:value="${departamento.id}"
-                        th:text="${departamento.nombre}"
-                        th:selected="${empleado.id != 0 and 
-                            departamento.id == empleado.departamento.id}"></option>
-        </select>
-        <fieldset>
-            <legend>Genero: </legend>
-            <label for="hombre">Hombre: </label>
-            <input type="radio" id="hombre" value="HOMBRE" th:field="*{genero}">
-            <label for="mujer">Mujer: </label>
-            <input type="radio" id="mujer" value="MUJER" th:field="*{genero}">
-            <label for="otro">Otro: </label>
-            <input type="radio" id="otro" value="OTRO" th:field="*{genero}">
-
-        </fieldset>
-
-        <label for="foto">Foto: </label>
-        <input type="file" name="imagen" id="foto">
-        <input type="submit">
-    </form>
 </body>
 </html>
